// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIPredicateCore CompoundPredicate constructor can't be constructed with at least one subpredicate 1`] = `[CompoundPredicateMustHaveAtLeastOneSubPredicate]`;

exports[`UIPredicateCore constructor check that every targets refer to a defined type 1`] = `[TargetMustReferToADefinedType: target "article.title" does not refer to a defined type, target.type_id="string"]`;

exports[`UIPredicateCore constructor default state (without passed data) should have one predicate, selected automatically 1`] = `
Object {
  "logicalType_id": "any",
  "predicates": Array [
    Object {
      "argument": null,
      "operator_id": "is",
      "target_id": "title",
    },
  ],
}
`;

exports[`UIPredicateCore constructor expose computed options 1`] = `
Array [
  "on",
  "once",
  "off",
  "setData",
  "add",
  "remove",
  "setPredicateTarget_id",
  "setPredicateOperator_id",
  "setPredicateLogicalType_id",
  "setArgumentValue",
  "getArgumentTypeComponentById",
  "getUIComponent",
  "toJSON",
  "root",
  "columns",
  "options",
]
`;

exports[`UIPredicateCore constructor rejects an error if json data does not start with a ComparisonPredicate 1`] = `[RootPredicateMustBeACompoundPredicate]`;

exports[`UIPredicateCore constructor rejects an error if json data is neither a CompoundPredicate or a ComparisonPredicate 1`] = `[UnknownJSONData]`;

exports[`UIPredicateCore constructor throws columns is not an object 1`] = `[Error: Object is required, got: null.]`;

exports[`UIPredicateCore constructor throws if columns does not have minimum required parameters 1`] = `[Error: Object {} MUST have a 'targets' property.]`;

exports[`UIPredicateCore constructor throws if options.getDefaultArgumentComponent is not overriden by the UI Framework adapter 1`] = `"UIFrameworkMustImplementgetDefaultArgumentComponent"`;

exports[`UIPredicateCore ctrl.add adds a second Predicate (a ComparisonPredicate) to the root CompoundPredicate 1`] = `
Object {
  "logicalType_id": "any",
  "predicates": Array [
    Object {
      "argument": null,
      "operator_id": "is",
      "target_id": "title",
    },
    Object {
      "argument": null,
      "operator_id": "is",
      "target_id": "title",
    },
  ],
}
`;

exports[`UIPredicateCore ctrl.add rejects if \`how\` is unsupported 1`] = `[AddCurrentlyOnlySupportAfterInsertion]`;

exports[`UIPredicateCore ctrl.add rejects if Predicate type is invalid 1`] = `[InvalidPredicateType]`;

exports[`UIPredicateCore ctrl.add rejects if where is unsupported 1`] = `[CannotAddSomethingElseThanACompoundPredicateOrAComparisonPredicate]`;

exports[`UIPredicateCore ctrl.remove(predicate) allow to remove a comparisonPredicate 1`] = `
Object {
  "$_type": "CompoundPredicate",
  "$canBeRemoved": false,
  "logic": Object {
    "$_type": "LogicalType",
    "label": "Any",
    "logicalType_id": "any",
  },
  "predicates": Array [
    Object {
      "$_type": "ComparisonPredicate",
      "$canBeRemoved": false,
      "argument": null,
      "operator": Object {
        "$_type": "Operator",
        "argumentType_id": "smallString",
        "label": "is",
        "operator_id": "is",
      },
      "target": Object {
        "$_type": "Target",
        "$type": Object {
          "$_type": "Type",
          "$operators": Array [
            Object {
              "$_type": "Operator",
              "argumentType_id": "smallString",
              "label": "is",
              "operator_id": "is",
            },
            Object {
              "$_type": "Operator",
              "argumentType_id": "smallString",
              "label": "Contains",
              "operator_id": "contains",
            },
          ],
          "operator_ids": Array [
            "is",
            "contains",
          ],
          "type_id": "string",
        },
        "label": "Title",
        "target_id": "title",
        "type_id": "string",
      },
    },
  ],
}
`;

exports[`UIPredicateCore ctrl.remove(predicate) allow to remove a comparisonPredicate and its parent CompoundPredicate if it was the last comparisonPredicate 1`] = `
Object {
  "$_type": "CompoundPredicate",
  "$canBeRemoved": false,
  "logic": Object {
    "$_type": "LogicalType",
    "label": "Any",
    "logicalType_id": "any",
  },
  "predicates": Array [
    Object {
      "$_type": "ComparisonPredicate",
      "$canBeRemoved": false,
      "argument": null,
      "operator": Object {
        "$_type": "Operator",
        "argumentType_id": "smallString",
        "label": "is",
        "operator_id": "is",
      },
      "target": Object {
        "$_type": "Target",
        "$type": Object {
          "$_type": "Type",
          "$operators": Array [
            Object {
              "$_type": "Operator",
              "argumentType_id": "smallString",
              "label": "is",
              "operator_id": "is",
            },
            Object {
              "$_type": "Operator",
              "argumentType_id": "smallString",
              "label": "Contains",
              "operator_id": "contains",
            },
          ],
          "operator_ids": Array [
            "is",
            "contains",
          ],
          "type_id": "string",
        },
        "label": "Title",
        "target_id": "title",
        "type_id": "string",
      },
    },
  ],
}
`;

exports[`UIPredicateCore ctrl.remove(predicate) allow to remove a compoundpredicate 1`] = `
Object {
  "$_type": "CompoundPredicate",
  "$canBeRemoved": true,
  "logic": Object {
    "$_type": "LogicalType",
    "label": "Any",
    "logicalType_id": "any",
  },
  "predicates": Array [
    Object {
      "$_type": "ComparisonPredicate",
      "$canBeRemoved": true,
      "argument": null,
      "operator": Object {
        "$_type": "Operator",
        "argumentType_id": "smallString",
        "label": "is",
        "operator_id": "is",
      },
      "target": Object {
        "$_type": "Target",
        "$type": Object {
          "$_type": "Type",
          "$operators": Array [
            Object {
              "$_type": "Operator",
              "argumentType_id": "smallString",
              "label": "is",
              "operator_id": "is",
            },
            Object {
              "$_type": "Operator",
              "argumentType_id": "smallString",
              "label": "Contains",
              "operator_id": "contains",
            },
          ],
          "operator_ids": Array [
            "is",
            "contains",
          ],
          "type_id": "string",
        },
        "label": "Title",
        "target_id": "title",
        "type_id": "string",
      },
    },
  ],
}
`;

exports[`UIPredicateCore ctrl.remove(predicate) forbids to remove an unknown type of predicate 1`] = `[CannotRemoveSomethingElseThanACompoundPredicateOrAComparisonPredicate]`;

exports[`UIPredicateCore ctrl.remove(predicate) forbids to remove the last predicate of the root CompoundPredicate 1`] = `[ForbiddenCannotRemoveLastComparisonPredicate]`;

exports[`UIPredicateCore ctrl.remove(predicate) forbids to remove the root CompoundPredicate 1`] = `[ForbiddenCannotRemoveRootCompoundPredicate]`;

exports[`UIPredicateCore ctrl.setPredicateLogicalType_id yield a rejected promise if logicalType_id cannot be found 1`] = `[LogicalType_idMustReferToADefinedLogicalType]`;

exports[`UIPredicateCore ctrl.setPredicateLogicalType_id yield a rejected promise if predicate is not a CompoundPredicate 1`] = `[PredicateMustBeACompoundPredicate]`;

exports[`UIPredicateCore ctrl.setPredicateOperator_id rejects an error if operator_id cannot be found 1`] = `[Operator_idMustReferToADefinedOperator]`;

exports[`UIPredicateCore ctrl.setPredicateTarget_id rejects when predicate refers to a invalid predicate 1`] = `[PredicateMustBeAComparisonPredicate]`;

exports[`UIPredicateCore ctrl.setPredicateTarget_id rejects when target_id refers to a not defined target 1`] = `[Target_idMustReferToADefinedTarget]`;

exports[`UIPredicateCore ctrl.setPredicateTarget_id work if we set a predicate to an exist target_id 1`] = `
Object {
  "$_type": "ComparisonPredicate",
  "$canBeRemoved": false,
  "argument": null,
  "operator": Object {
    "$_type": "Operator",
    "argumentType_id": "number",
    "label": "<",
    "operator_id": "isLowerThan",
  },
  "target": Object {
    "$_type": "Target",
    "$type": Object {
      "$_type": "Type",
      "$operators": Array [
        Object {
          "$_type": "Operator",
          "argumentType_id": "number",
          "label": "<",
          "operator_id": "isLowerThan",
        },
        Object {
          "$_type": "Operator",
          "argumentType_id": "number",
          "label": "=",
          "operator_id": "isEqualTo",
        },
        Object {
          "$_type": "Operator",
          "argumentType_id": "number",
          "label": ">",
          "operator_id": "isHigherThan",
        },
      ],
      "operator_ids": Array [
        "isLowerThan",
        "isEqualTo",
        "isHigherThan",
      ],
      "type_id": "int",
    },
    "label": "Video count",
    "target_id": "videoCount",
    "type_id": "int",
  },
}
`;

exports[`UIPredicateCore toJSON serialize without special flags 1`] = `
Object {
  "logicalType_id": "any",
  "predicates": Array [
    Object {
      "argument": null,
      "operator_id": "is",
      "target_id": "title",
    },
    Object {
      "logicalType_id": "any",
      "predicates": Array [
        Object {
          "argument": null,
          "operator_id": "is",
          "target_id": "title",
        },
        Object {
          "logicalType_id": "any",
          "predicates": Array [
            Object {
              "argument": null,
              "operator_id": "is",
              "target_id": "title",
            },
          ],
        },
      ],
    },
  ],
}
`;
